devops/specs/common/ui-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ui
  labels:
    istio-injection: enabled
